objects/EUR_TR_AccountSalesHofBrand__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>EUR_TR_Brand_Quality__c</fullName>
        <label>EUR_TR_Brand_Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Brand__c</fullName>
        <label>EUR_TR_Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Code__c</fullName>
        <externalId>true</externalId>
        <label>EUR_TR_Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ImageUrlF__c</fullName>
        <formula>CASE( EUR_TR_Brand_Quality__c ,
&apos;CHIVAS REGAL 12 YO&apos;, &apos;/resource/ChivasRegal12YO&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EUR_TR_ImageUrlF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ImageUrl__c</fullName>
        <label>EUR_TR_ImageUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MATActual__c</fullName>
        <label>EUR_TR_MATActual</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MATCaseCluster__c</fullName>
        <label>EUR_TR_MATCaseCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;-21</fullName>
                </value>
                <value>
                    <fullName>- 11-20</fullName>
                </value>
                <value>
                    <fullName>&lt;-10</fullName>
                </value>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_MATCluster__c</fullName>
        <label>EUR_TR_MATCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+ 0-%10</fullName>
                </value>
                <value>
                    <fullName>+ %11-%20</fullName>
                </value>
                <value>
                    <fullName>+ %21</fullName>
                </value>
                <value>
                    <fullName>+ %21+</fullName>
                </value>
                <value>
                    <fullName>- 0-%10</fullName>
                </value>
                <value>
                    <fullName>- %11-%20</fullName>
                </value>
                <value>
                    <fullName>- %21+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_MATCs__c</fullName>
        <label>EUR_TR_MATCs</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MATLyShare__c</fullName>
        <label>EUR_TR_MATLyShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MATLy__c</fullName>
        <label>EUR_TR_MATLy</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MATPer__c</fullName>
        <label>EUR_TR_MATPer</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MATShare__c</fullName>
        <label>EUR_TR_MATShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MAT_VARYOK__c</fullName>
        <label>EUR_TR_MAT_VARYOK</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAR-VAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDActual__c</fullName>
        <label>EUR_TR_MTDActual</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDCaseCluster__c</fullName>
        <label>EUR_TR_MTDCaseCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>- 11-20</fullName>
                </value>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDCluster__c</fullName>
        <label>EUR_TR_MTDCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>- %11-%20</fullName>
                </value>
                <value>
                    <fullName>- %21+</fullName>
                </value>
                <value>
                    <fullName>- 0-%10</fullName>
                </value>
                <value>
                    <fullName>+ %11-%20</fullName>
                </value>
                <value>
                    <fullName>+ %21+</fullName>
                </value>
                <value>
                    <fullName>+ 0-%10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDCs__c</fullName>
        <label>EUR_TR_MTDCs</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDLyShare__c</fullName>
        <label>EUR_TR_MTDLyShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDLy__c</fullName>
        <label>EUR_TR_MTDLy</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDPer__c</fullName>
        <label>EUR_TR_MTDPer</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MTDShare__c</fullName>
        <label>EUR_TR_MTDShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDActual__c</fullName>
        <label>EUR_TR_QTDActual</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDCaseCluster__c</fullName>
        <label>EUR_TR_QTDCaseCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDCluster__c</fullName>
        <label>EUR_TR_QTDCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDCs__c</fullName>
        <label>EUR_TR_QTDCs</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDLyShare__c</fullName>
        <label>EUR_TR_QTDLyShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDLy__c</fullName>
        <label>EUR_TR_QTDLy</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDPer__c</fullName>
        <label>EUR_TR_QTDPer</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QTDShare__c</fullName>
        <label>EUR_TR_QTDShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EUR TR Related Account</label>
        <referenceTo>EUR_TR_Account__c</referenceTo>
        <relationshipLabel>EUR TR Account Sales H. Of Brand</relationshipLabel>
        <relationshipName>EUR_TR_Account_Sales_HofBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_TransferTime__c</fullName>
        <label>EUR_TR_TransferTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDActual__c</fullName>
        <label>EUR_TR_YTDActual</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDCaseCluster__c</fullName>
        <label>EUR_TR_YTDCaseCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>- 11-20</fullName>
                </value>
                <value>
                    <fullName>&lt;-21</fullName>
                </value>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDCluster__c</fullName>
        <label>EUR_TR_YTDCluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>- %11-%20</fullName>
                </value>
                <value>
                    <fullName>- %21+</fullName>
                </value>
                <value>
                    <fullName>- 0-%10</fullName>
                </value>
                <value>
                    <fullName>+ %11-%20</fullName>
                </value>
                <value>
                    <fullName>+ %21+</fullName>
                </value>
                <value>
                    <fullName>+ 0-%10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDCs__c</fullName>
        <label>EUR_TR_YTDCs</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDLyShare__c</fullName>
        <label>EUR_TR_YTDLyShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDLy__c</fullName>
        <label>EUR_TR_YTDLy</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDPer__c</fullName>
        <label>EUR_TR_YTDPer</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_YTDShare__c</fullName>
        <label>EUR_TR_YTDShare</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_YTD_VARYOK__c</fullName>
        <label>EUR_TR_YTD_VARYOK</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAR-VAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EUR TR Account Sales H. Of Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_TR_RelatedAccount__c</columns>
        <columns>EUR_TR_Brand__c</columns>
        <columns>EUR_TR_MAT_VARYOK__c</columns>
        <columns>EUR_TR_YTD_VARYOK__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>EUR TR Account Sales No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR TR Account Sales H. Of Brand</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_AccountSalesHofBrand</fullName>
        <active>true</active>
        <label>EUR TR Account Sales H. of Brands</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>